--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,7 @@ body {
   width: 100vw;
   height: 100vh;
   font-family: "Caviar";
-  background-color: var(--bg-white);
-  background: url(../assets/main/home-bg.svg) no-repeat;
+  background: url(../assets/main/home-bg.svg) no-repeat, var(--bg-white);
   background-position: top right;
 }
 
