--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,15 @@
 main {
   display: flex;
-  align-items: center;
   height: 80%;
   max-width: var(--content-max-width);
   margin: auto;
 }
+
+#home {
+  margin: auto;
+  width: 100%;
+}
+
 .home__wrapper {
   display: grid;
   grid-template-columns: 33rem 1fr;
@@ -24,4 +29,32 @@ main {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+}
+section {
+  display: none;
+  -webkit-animation: fadeOut 3s;
+  animation: fadeOut 3s;
+}
+
+section:target {
+  display: block;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
