--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,8 +9,23 @@
   --content-max-width: 1251px;
   --bg-white: hsl(0deg 0% 96%);
   /* TYPOGRAPHY */
-  --x-large: 28px;
-  --large: 18px;
-  --medium: 16px;
-  --small: 12px;
+  --x-large: 1.75rem;
+  --large: 1.125rem;
+  --medium: 1rem;
+  --small: 0.75rem;
+  /**
+    Breakpoints:
+    ------------
+    xs: min-width: 320px; //small device
+    sm: min-width: 640px; //small device
+    md: min-width: 768px; // medium device
+    lg: min-width: 1024px; // large device
+    xl: min-width: 1280px; // extra large device
+    2xl: min-width: 1536px; // 2 x extra large device
+  **/
+  --xs: 320px;
+  --sm: 640px;
+  --md: 768px;
+  --lg: 1024px;
+  --xl: 1280px;
 }
