--- a/styles/services.css
+++ b/styles/services.css
@@ -1,5 +1,5 @@
 #services {
-  background: url(/assets/services/services.svg) center no-repeat;
+  background: url("../assets/services/services.svg") center no-repeat;
   margin: auto;
 }
 .services__wrapper {
