adding contact-us

--- a/styles/style.css
+++ b/styles/style.css
@@ -55,3 +55,11 @@ a {
 .accent {
   color: var(--accent);
 }
+
+.primary  {
+  color: var(--primary);
+}
+
+.secondary {
+  color: var(--secondary);
+}
