--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,31 +1,32 @@
 :root {
-  --primary: hsl(265deg 68% 87%);
-  --secondary: hsl(183deg 100% 21%);
-  --accent: hsl(265, 76%, 73%);
-  --black: hsl(0, 0%, 0%);
-  --dark-gray: hsl(213deg 24% 16%);
-  --white: hsl(0deg 0% 100%);
-  --img-shadow: 0px 0px 12px -4px hsl(0deg 0% 37%);
-  --content-max-width: 1251px;
-  --bg-white: hsl(0deg 0% 96%);
-  /* TYPOGRAPHY */
-  --x-large: 1.75rem;
-  --large: 1.125rem;
-  --medium: 1rem;
-  --small: 0.75rem;
-  /**
-    Breakpoints:
-    ------------
-    xs: min-width: 320px; //small device
-    sm: min-width: 640px; //small device
-    md: min-width: 768px; // medium device
-    lg: min-width: 1024px; // large device
-    xl: min-width: 1280px; // extra large device
-    2xl: min-width: 1536px; // 2 x extra large device
-  **/
-  --xs: 320px;
-  --sm: 640px;
-  --md: 768px;
-  --lg: 1024px;
-  --xl: 1280px;
+    --primary: hsl(265deg 68% 87%);
+    --secondary: hsl(183deg 100% 21%);
+    --secondary--light: hsl(183.53deg 19.1% 82.55%);
+    --accent: hsl(265, 76%, 73%);
+    --black: hsl(0, 0%, 0%);
+    --dark-gray: hsl(213deg 24% 16%);
+    --white: hsl(0deg 0% 100%);
+    --img-shadow: 0px 0px 12px -4px hsl(0deg 0% 37%);
+    --content-max-width: 1251px;
+    --bg-white: hsl(0deg 0% 96%);
+    /* TYPOGRAPHY */
+    --x-large: 1.75rem;
+    --large: 1.125rem;
+    --medium: 1rem;
+    --small: 0.75rem;
+    /**
+      Breakpoints:
+      ------------
+      xs: min-width: 320px; //small device
+      sm: min-width: 640px; //small device
+      md: min-width: 768px; // medium device
+      lg: min-width: 1024px; // large device
+      xl: min-width: 1280px; // extra large device
+      2xl: min-width: 1536px; // 2 x extra large device
+    **/
+    --xs: 320px;
+    --sm: 640px;
+    --md: 768px;
+    --lg: 1024px;
+    --xl: 1280px;
 }
