chore(mobile): addin hamburger menu

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,60 +1,152 @@
 main {
-  display: flex;
-  height: 80%;
-  max-width: var(--content-max-width);
-  margin: auto;
+    display: flex;
+    height: 80%;
+    max-width: var(--content-max-width);
+    margin: auto;
 }
 
 #home {
-  margin: auto;
-  width: 100%;
+    margin: auto;
+    width: 100%;
 }
 
 .home__wrapper {
-  display: grid;
-  grid-template-columns: 33rem 1fr;
-  width: 100%;
+    display: grid;
+    grid-template-columns: 33rem 1fr;
+    width: 100%;
 }
 
 .home__content h1:nth-child(2) {
-  margin-bottom: 3rem;
+    margin-bottom: 3rem;
 }
 
 .home__content p {
-  font-size: var(--x-large);
-  margin-bottom: 3rem;
+    font-size: var(--x-large);
+    margin-bottom: 3rem;
 }
 
 .home__preview {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
+
+.home__preview img:first-child {
+    display: none;
+}
+
+.home__wrapper > .btn {
+    display: none;
+}
+
+.hamburger {
+    display: none;
+}
+
 section {
-  display: none;
-  -webkit-animation: fadeOut 3s;
-  animation: fadeOut 3s;
+    display: none;
+    -webkit-animation: fadeOut 3s;
+    animation: fadeOut 3s;
 }
 
 section:target {
-  display: block;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
+    display: block;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
 }
 
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+#burger,
+#burger-container {
+    display: none;
 }
+
+
+/* Mobile responsive */
+@media only screen and (max-width: 1280px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 4rem;
+    }
+
+    header ul,
+    header .btn {
+        display: none;
+    }
+
+    header > img {
+        width: 10rem;
+    }
+
+    #home {
+        margin: 0;
+    }
+
+    .home__content h1:nth-of-type(2),
+    .home__content p:nth-of-type(1),
+    .home__content button,
+    .home__preview img:nth-of-type(2) {
+        display: none;
+    }
+
+    .home__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 100%;
+        padding-bottom: 2rem;
+    }
+
+    .home__wrapper > .btn {
+        display: block;
+        font-size: 1rem;
+    }
+
+    .home__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 80%;
+        gap: 2rem;
+    }
+
+    .home__content p:nth-of-type(2) {
+        margin-bottom: 0;
+    }
+
+    .home__content h1 {
+        font-size: 2.75rem;
+    }
+
+    .home__content > p {
+        text-align: center;
+        font-size: 1.375rem;
+    }
+
+    .home__preview img:first-child {
+        display: block;
+    }
+}
+
+/* **************** */
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
