--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Caviar";
   src: url("../assets/fonts/caviardreams-webfont.woff2") format("woff2"),
-    url("../assets/fonts/caviardreams-webfont.woff") format("woff");
+  url("../assets/fonts/caviardreams-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -56,10 +56,17 @@ a {
   color: var(--accent);
 }
 
-.primary  {
+.primary {
   color: var(--primary);
 }
 
 .secondary {
   color: var(--secondary);
+}
+
+@media only screen and (max-width: 1280px) {
+  main #about-us,
+  main #tech-stack {
+    margin: auto 3rem;
+  }
 }
