--- a/styles/hamburger-menu.css
+++ b/styles/hamburger-menu.css
@@ -40,6 +40,10 @@
     cursor: pointer;
   }
 
+  .burger-checkbox-menu:checked + #burger-container span {
+    background-color: var(--white);
+  }
+
   .burger-checkbox-menu:checked + label span {
     opacity: 0;
   }
@@ -63,13 +67,13 @@
     width: 100%;
     height: 100%;
     z-index: 3;
-    transition: 0.5s;
-    transition-delay: 0.5s;
     overflow: hidden;
-    background-color: white;
-    background-image: url(../assets/main/main-mobile.svg);
+    background-color: var(--black);
     background-repeat: no-repeat;
     background-position: center 80%;
+    opacity: 0.8;
+    transition: 0.5s;
+    transition-delay: 0.5s;
   }
 
   .burger-checkbox-menu ~ nav {
@@ -79,17 +83,16 @@
   .burger-checkbox-menu:checked ~ nav ul {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    margin: 4rem auto auto;
+    justify-content: center;
     height: 100%;
     align-items: center;
     padding: 0;
     transition: 0.5s;
-    gap: 1rem;
+    gap: 4rem;
   }
 
   .burger-checkbox-menu:checked ~ nav ul a {
-    color: var(--secondary);
+    color: var(--white);
     font-size: 2rem;
     font-weight: bold;
   }
