--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,7 @@
 header {
   display: grid;
   grid-template-columns: auto 1fr auto;
-  height: 20%;
+  height: 15%;
   max-width: var(--content-max-width);
   margin: auto;
   align-items: center;
@@ -59,5 +59,9 @@ header img {
 
   header .company-logo {
     margin-left: 2rem;
+  }
+
+  li {
+    margin-right: 0;
   }
 }
