--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 main {
   display: flex;
-  height: 80%;
+  height: 85%;
   max-width: var(--content-max-width);
   margin: auto;
 }
@@ -60,9 +60,14 @@ section:target {
   display: none;
 }
 
-
 /* Mobile responsive */
 @media only screen and (max-width: 1280px) {
+  main {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
   #home {
     margin: 0;
   }
