chore(header): adding title section on mobile

--- a/styles/about.css
+++ b/styles/about.css
@@ -78,7 +78,7 @@
   }
 
   .back-btn__mobile {
-    display: block;
+    display: block !important;
     height: 2rem;
     width: 2rem;
     background-image: url('../assets/back-arrow.svg');
