--- a/styles/header.css
+++ b/styles/header.css
@@ -32,6 +32,10 @@ header img {
   display: none;
 }
 
+#back-btn-and-title {
+  display: none;
+}
+
 /* Large Breakpoint */
 @media screen and (max-width: 1280px) {
   header {
@@ -48,6 +52,17 @@ header img {
 
   header > img {
     width: 10rem;
+  }
+
+  #section-selected {
+    color: var(--secondary);
+    flex-grow: 1;
+    text-align: center;
+  }
+
+  #back-btn-and-title {
+    flex-grow: 1;
+    display: flex;
   }
 }
 
